alignment issues of banner

--- a/pages/components/CitiesBanner/citiesbanner.module.scss
+++ b/pages/components/CitiesBanner/citiesbanner.module.scss
@@ -107,18 +107,17 @@
 
 @media (min-width:2000px) {
   .citiesbannerform {
-    // width: unset;
-    // scale: (1.5);
-    left: 10%;
+    width: 32vw;
+    top: 53%;
   }
   .citiesbannercontent{
-    top: 18%;
+    top: 36%;
   }
   .tagline1{
-    font-size: 4em;
+    font-size: 2.8vw;
   }
   .tagline{
-    font-size: 3em;
+    font-size: 2vw;
   }
 
 }
