--- a/pages/components/IterableComponent/DynamicIterableComponent.module.scss
+++ b/pages/components/IterableComponent/DynamicIterableComponent.module.scss
@@ -174,7 +174,7 @@
 
 
 
-@media screen and (max-width:4000px) and (min-width:3500px) {
+@media (min-width:3500px) {
 
   .customimage>img {
 
