--- a/pages/components/MeetDesigner/ideas.module.scss
+++ b/pages/components/MeetDesigner/ideas.module.scss
@@ -87,7 +87,7 @@
     }
 }
 
-@media screen and  (max-width:4000px) and  (min-width:3500px) {
+@media (min-width:3500px) {
     .Head {
       
         font-size: 46px;
