--- a/pages/components/Spacesavingfurniture/Furniture.module.scss
+++ b/pages/components/Spacesavingfurniture/Furniture.module.scss
@@ -38,22 +38,25 @@
   width: 34vw;
 }
 
-@media only screen and (max-width:4000px) and (min-width:2000px) {
+@media (min-width:2000px) {
   .furniture_tagline {
-    font-size: 4.2em;
+    font-size: 2.8vw;
+    line-height: 3.3vw;
   }
 
   .furniture_tagline1 {
-    font-size: 4.2em;
+    font-size: 2.8vw;
+    line-height: 3.3vw;
   }
 
   .furniturebannercontent {
-    top: 25%;
-    left: 64%;
+    top: 31%;
+    left: 66.5%;
   }
 
   .furniturebannerform {
-    top: 40%;
+    top: 55%;
+    width: 32vw;
   }
 }
 
