--- a/pages/components/VisitUs/visituscommon.module.scss
+++ b/pages/components/VisitUs/visituscommon.module.scss
@@ -48,7 +48,7 @@ text-decoration: none;
    padding-bottom: 2%;
 
   }
-  @media screen and (max-width:4000px) and (min-width:3000px) {
+  @media (min-width:3000px) {
     .visitus_filter_link {
       font-size: 22px;
       line-height: 30px;
