--- a/styles/modularkitchen.module.scss
+++ b/styles/modularkitchen.module.scss
@@ -114,7 +114,7 @@
   }
 }
 
-@media screen and (max-width:4000px) and (min-width:3000px) {
+@media (min-width:3000px) {
   .kitchen_filter_link {
     font-size: 22px;
     line-height: 30px;
